<resources>
    <string name="app_name">HealthScanApp</string>
    <string name="myapp">Health Scan</string>
    <string name="image_welcome">Health Scan</string>
    <string name="title_menu1">Catat ingat makananmu</string>
    <string name="description_splash">Semua Lebih Mudah Dalam Satu Genggaman</string>
    <string name="description_menu1">Inilah awal perjalanan Anda untuk makan lebih sehat dengan mudah mencatat makanan Anda menggunakan kamera ponsel. Lacak kebiasaan makan yang ramah lingkungan dengan sederhana.</string>
    <string name="start_now">Mulai Sekarang</string>
    <string name="title_menu2">Cek kesehatan lebih mudah dalam satu genggaman</string>
    <string name="description_menu2">Dapatkan akses cepat dan praktis ke informasi kesehatan Anda, cukup dengan satu genggaman.</string>
    <string name="let_start">Rekam Riwayat Kesehatan dengan Simpel</string>
    <string name="description_menu3">Platform yang memudahkan pengguna untuk merekam, melacak, dan memantau kondisi kesehatan mereka dalam satu aplikasi. Memungkinkan pengelolaan informasi kesehatan secara terstruktur serta akses cepat ke saran medis dan pemantauan progres kesehatan.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="my">My</string>
    <string name="todo">TODO</string>
    <string name="hai">Hai,</string>
    <string name="name">Mohamad Fahmi Wahyu Aji bimas sankerta</string>
    <string name="tanda_seru">!</string>
    <string name="kriteria_badan">Nilai IMT anda:</string>
    <string name="normal">Data Belum Ada</string>
    <string name="catatan_konsumsi">Catatan Konsumsi</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="toko_bergizi">Toko Bergizi</string>
    <string name="tes_kesehatan">Tes Kesehatan</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="notifikasi_informasi">Yahh..tidak ada notifikasi saat ini !</string>
    <string name="upload_gambar">Upoad Gambar</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Simpan</string>
    <string name="empty_camera">Yahh..gagal memunculkan kamera!</string>
    <string name="empty_take_photho">Gagal mengambil gambar, ulangi sekali lagi!</string>
    <string name="My">Profil</string>
    <string name="email">healthscan.id@gmail.com</string>
    <string name="keluar">Keluar</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="ganti_bahasa">Ganti Bahasa</string>
    <string name="ketentuan_dan_privasi">Ketentuan dan Privasi</string>
    <string name="versi_1_0">Versi 1.0</string>
    <string name="kebijakan">Kebijakan Privasi</string>
    <string name="about_app">Informasi Aplikasi</string>
    <string name="text_one">HealthScan adalah aplikasi yang memungkinkan pengguna untuk memindai informasi nutrisi dan komposisi makanan dengan menggunakan kamera ponsel untuk memberikan informasi tentang nilai gizi makanan.</string>
    <string name="pengumpulan_informasi">1. Pengumpulan Informasi</string>
    <string name="desc_informasi">Aplikasi ini dapat mengumpulkan informasi seperti lokasi, data perangkat, dan riwayat pemindaian makanan. Data ini digunakan untuk meningkatkan pengalaman pengguna dan tidak akan disalahgunakan.</string>
    <string name="pengguna_informasi">2. Penggunaan Informasi</string>
    <string name="desc_pengguna">Informasi yang diperoleh dari pemindaian makanan digunakan untuk memberikan informasi gizi kepada pengguna. Aplikasi ini tidak memberikan saran medis; informasi yang diberikan hanya sebagai referensi.</string>
    <string name="keaman_data">3. Keamanan Data</string>
    <string name="desc_data">Kami berkomitmen untuk menjaga keamanan data pengguna. Langkah-langkah keamanan yang sesuai diambil untuk melindungi informasi pribadi pengguna dari akses yang tidak sah atau penggunaan yang tidak sah.</string>
    <string name="pemabaruan">4. Pembaruan Kebijakan Privasi</string>
    <string name="desc_pemebaruan">Kami berkomitmen untuk menjaga keamanan data pengguna. Langkah-langkah keamanan yang sesuai diambil untuk melindungi informasi pribadi pengguna dari akses yang tidak sah atau penggunaan yang tidak sah.</string>
    <string name="kontak_kami">5. Kontak Kami</string>
    <string name="desc_kontak">Jika Anda memiliki pertanyaan atau kekhawatiran tentang kebijakan privasi kami atau penggunaan Aplikasi \"Health Scan\", jangan ragu untuk menghubungi kami melalui alamat email yang tersedia di aplikasi.\n\nDengan menggunakan Aplikasi \"Health Scan\", Anda menyetujui dan memahami ketentuan serta kebijakan privasi yang telah dijelaskan di atas. Kami berharap aplikasi ini dapat memberikan manfaat yang besar dalam memantau informasi nutrisi makanan dan membantu meningkatkan pemahaman akan gizi yang tepat.\n\nTerima kasih telah memilih dan menggunakan Aplikasi \"Health Scan\" untuk mendukung gaya hidup sehat Anda.</string>
    <string name="emails">healthscan.id@gmail.com</string>
    <string name="subject_email">Ketentuan Kebijakan Privasi</string>
    <string name="isi_pesan">Kepada Tim Health Scan,\n\nSalam sejahtera,\n\nSaya adalah pengguna setia aplikasi Health Scan dan saya ingin mengetahui lebih lanjut tentang kebijakan dan privasi yang diterapkan dalam penggunaan aplikasi tersebut.\n\nApakah Anda bisa memberikan detail terkait bagaimana aplikasi Health Scan mengelola data pribadi pengguna? Saya sangat menghargai privasi saya dan ingin memastikan bahwa informasi yang saya berikan saat menggunakan aplikasi ini diperlakukan dengan aman dan sesuai dengan standar keamanan yang relevan.\n\nJika memungkinkan, saya juga ingin meminta salinan lengkap dari kebijakan privasi yang Anda terapkan. Informasi ini akan membantu saya untuk lebih memahami bagaimana data saya diperlakukan dan disimpan oleh aplikasi Health Scan.\n\nTerima kasih atas perhatian dan waktu yang Anda berikan untuk menjawab pertanyaan saya. Saya sangat menghargai transparansi dan komitmen Anda dalam menjaga keamanan informasi pengguna.\n\nDengan hormat,\n\n[Nama Anda]\n[Informasi Kontak Anda]</string>
    <string name="empty_apps">Tidak ada aplikasi email yang tersedia!</string>
    <string name="imt">Indeks Masa Tubuh</string>
    <string name="text_berat_badan">Berat Badan</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="text_tinggi_badan">Tinggi Badan</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="hasil">Hasil</string>
    <string name="simpan">Simpan</string>
    <string name="cm">Cm</string>
    <string name="kg">Kg</string>
    <string name="hasil_imt">Hasil IMT Anda adalah: %.2f</string>
    <string name="pesan_error">Mohon masukkan tinggi dan berat badan yang valid</string>
    <string name="hasil_kurang">Berat badan kurang.</string>
    <string name="hasil_normal">Berat badan normal.</string>
    <string name="hasil_indikasi">Berat badan berlebih (kecenderungan obesitas).</string>
    <string name="hasil_obesitas">Obesitas.</string>
    <string name="desc_prediksi">Tekan tombol prediksi untuk megetahui komposisi makananmu!</string>
    <string name="prediksi">Prediksi</string>
    <string name="hint_username">Username</string>
    <string name="error_username">Enter a name that fits more than 4 characters!</string>
    <string name="alert_email_error">Invalid Email</string>
    <string name="hint_email">Email</string>
    <string name="alert_email_required">Email required!</string>
    <string name="alert_email_example_com_not_allowed">Email with @example.com domain is not allowed!</string>
    <string name="hint_password">Password</string>
    <string name="error_password">Password must be at least 8 characters long!</string>
    <string name="belum_punya_akun">Don\'t have an account?</string>
    <string name="cart">Cart</string>
    <string name="logo">Logo</string>
    <string name="poto_product">Poto_Product</string>
    <string name="default_web_client_id">your_web_client_id_here</string>
    <string name="riwayat_konsumsi">Riwayat Konsumsi</string>
    <string name="tanggal">Date</string>
    <string name="nama_makanan">Pizza</string>
    <string name="nutrion">nutrion</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="desc_login">Welcome Back! Sign in with your email and password or continue with social media</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="desc_signup">create an account to access all features</string>
    <string name="sign_ups">Sign Up</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>

</resources>