<androidx.cardview.widget.CardView
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true"
    card_view:cardCornerRadius="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/profile_aji"
                    android:id="@+id/userImage"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp">

                    <TextView
                        android:id="@+id/sapaan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hai"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_marginEnd="4dp" />

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_toEndOf="@+id/sapaan"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/icon_pencil"
                        android:id="@+id/btn_edit"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/userName"
                        android:text="@string/email"
                        android:textColor="@color/black_500"
                        android:textSize="16sp"
                        android:layout_marginBottom="6dp"
                        android:id="@+id/text_email"/>

                    <LinearLayout
                        android:id="@+id/button_siswa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_email"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:background="@drawable/shape_rectangel_validasi">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/validasi"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="4dp"
                            android:contentDescription="@string/todo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/normal"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:textAllCaps="false"
                            android:layout_gravity="center"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"/>

                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <Button
                android:id="@+id/riwayatKonseling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_button_out"
                android:text="@string/keluar"
                android:layout_marginBottom="20dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="15dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

